# LOIS_11

./: CMakeLists.txt  main.cpp
src/: LogicFormula.hpp  Parser.cpp  Parser.hpp  Validator.cpp  Validator.hpp
tests/: CMakeLists.txt
tests/src/: ValidatorTests.cpp
